# n-body-simulation

./: CMakeLists.txt  README.md
src/: Camera.hpp  Filesystem.hpp  Input.hpp  Pipeline.hpp  Shader.hpp  VulkanInitializer.hpp  VulkanTools.hpp  n-body-simulation.cpp
src/base/: VulkanBase.cpp  VulkanBase.h
src/shaders/: cache.comp  nbody.comp  shader.frag  shader.vert
